--- a/theme/theme.scss
+++ b/theme/theme.scss
@@ -1,6 +1,8 @@
 @import './education';
+@import './about';
 
 body {
+  font-family: 'Ruluko', sans-serif;
   color: #333333;
   position: fixed;
   top: 0;
@@ -60,6 +62,8 @@ a {
 .main-section {
   flex-grow: 1;
   display: flex;
+  overflow: auto;
+  margin: 0 20px;
 }
 
 ul {
@@ -82,6 +86,14 @@ header {
   a {
     font-size: 1.4em;
   }
+
+  a:hover {
+    text-decoration: underline;
+  }
+}
+
+.selected {
+  border-bottom: 2px solid #339bff;
 }
 
 footer {
