--- a/theme/theme.scss
+++ b/theme/theme.scss
@@ -1,6 +1,7 @@
 @import './education';
 @import './about';
 @import './experiences';
+@import './open-source';
 
 body {
   font-family: 'Ruluko', sans-serif;
