--- a/theme/theme.css
+++ b/theme/theme.css
@@ -416,7 +416,8 @@ footer {
 .main-container {
   height: 100%;
   display: flex;
-  flex-direction: column; }
+  flex-direction: column;
+  overflow: auto; }
 
 abbr {
   border-bottom: 1px dotted #333333; }
