--- a/theme/theme.css
+++ b/theme/theme.css
@@ -323,6 +323,8 @@ iframe {
     display: inline-block;
     padding-bottom: 0.8em;
     margin-bottom: 0.5em; }
+  .open-source li {
+    margin: 0.8em 0; }
 
 body {
   font-family: "Ruluko", sans-serif;
