--- a/theme/open-source.scss
+++ b/theme/open-source.scss
@@ -8,7 +8,7 @@
     text-decoration: underline;
   }
 
-  img{
+  img {
     display: block;
   }
 
@@ -20,4 +20,8 @@
   }
 
   font-size: 1.2em;
+
+  li {
+    margin: 0.8em 0;
+  }
 }
